deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: k8s-static
  namespace: static
spec:
  selector:
    matchLabels:
      app: static
  replicas: 1
  template:
    matadata:
      labels:
        app: static
    spec:
      containers:
      - name: static
        image: ECR repo url:1
        ports:
        - containerPort: 80
